--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,14 @@
 *.csv
 *.jp2
 *xml
+*.jpg
+images/
 data/
+testing/
+training/
+epoch=8
+epoch=4
+notes.txt 
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
