--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ training/
 epoch=8
 epoch=4
 notes.txt 
+segment_labels/
+Stanford3dDataset_v1.2_aligned_version/
+GISData/
+trainingData/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
